[package]
name = "khill"
version = "0.1.0"
authors = ["Donovan Parks"]
description = "Calculates the effective number of genomes in a collection of assembled genomes."
readme = "../README.md"
edition = "2024"

[dependencies]
ahash = "0.8.*"
anstyle = "1.0.*"
anyhow = "1.0.*"
clap = { version = "4.5.*", features = ["derive", "color"] }
indicatif = "0.17.*"
itertools = "0.14.*"
log = "0.4.*"
log4rs = "1.3.*"
needletail = "0.6.*"
num-format = "0.4.*"
rayon = "1.10.*"
serde = { version = "1.0.*", features = ["derive"] }
tempfile = "3.20.*"
